--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "node scripts/gh-pages-deploy.js"
+    "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://richardjim.github.io/mathGraphs/",
   "dependencies": {
     "core-js": "^3.6.5",
+    "gh-pages": "^3.2.3",
     "json-server": "^0.17.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
