--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://richardjim.github.io/vue1j/",
+  "homepage": "https://richardjim.github.io/vue1j",
   "dependencies": {
     "core-js": "^3.6.5",
     "gh-pages": "^3.2.3",
