--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://richardjim.github.io/",
   "name": "router-1",
   "version": "0.1.0",
   "private": true,
@@ -8,7 +9,7 @@
     "lint": "vue-cli-service lint",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://richardjim.github.io/vue1j",
+  
   "dependencies": {
     "core-js": "^3.6.5",
     "gh-pages": "^3.2.3",
