--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "vue-cli-service lint",
     "deploy": "gh-pages -d dist"
   },
-  
   "dependencies": {
     "core-js": "^3.6.5",
     "gh-pages": "^3.2.3",
@@ -21,7 +20,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "execa": "latest"
+    "@vue/compiler-sfc": "^3.0.0"
+    
   }
 }
