--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://richardjim.github.io/",
+  "homepage": "https://richardjim.github.io/vue1j/",
   "name": "router-1",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint",
     "deploy": "gh-pages -d dist"
   },
+  
   "dependencies": {
     "core-js": "^3.6.5",
     "gh-pages": "^3.2.3",
@@ -21,6 +22,5 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0"
-    
   }
 }
