--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "gh-pages -d dist"
+   
+    "deploy": "node scripts/gh-pages-deploy.js"
   },
   
   "dependencies": {
