--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-   
-    "deploy": "node scripts/gh-pages-deploy.js"
+    "deploy": "gh-pages -d dist"
+    
   },
   
   "dependencies": {
