--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "npm run build && gh-pages -d build "
+    "deploy": " gh-pages -d dist"
     
   },
   
@@ -22,7 +22,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "execa": "latest"
+    "@vue/compiler-sfc": "^3.0.0"
+    
   }
 }
